--- a/templates/home.html
+++ b/templates/home.html
@@ -107,10 +107,10 @@
                       <p><i class="fa fa-envelope"></i>matrusricollege@edu.in</p>
                          </div>
                          <div class="col-md-4 footer-box">
-                             <p><b>SUBCRIBE TO NEWSLETTER</b></p>
-                             <input type="email" class="form-control" placeholder="Your Email">
-                             <button type="button" class="btn btn-primary">SUBSCRIBE</button>
-                         </div>
+                            <!-- <p><b>SUBCRIBE TO NEWSLETTER</b></p>
+                             <input type="email" class="form-control" placeholder="Your Email" pattern="[a-z0-9]+[.]?[a-z0-9]+[@]matrusri.edu.in$">
+                             <button type="button" class="btn btn-primary">SUBSCRIBE</button> -->
+                         </div> 
               </div>
               <hr>
               <p  class="copyright">Created for Project</p>
