--- a/templates/studentlogin.html
+++ b/templates/studentlogin.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="login-content">
 			
-			<form name="login"   method="post" autocomplete="on">
+			<form name="login"   method="post" autocomplete="off">
 				
 				<img src="{{url_for('static',filename='images/profile.svg')}}">
 				<h2 class="title">Student Login</h2>
