--- a/templates/admin.html
+++ b/templates/admin.html
@@ -27,7 +27,7 @@
                 <div class="container">
                     <form action="/login/admin/bk"  method="post" id="search-form" target="_self" autocomplete="off">
                         <ul class="search-box">
-                            <button type="button"><a class="fa fa-microphone"  href="/login/admin/speech"></a></button>
+                         <!--   <button type="button"><a class="fa fa-microphone"  href="/login/admin/speech"></a></button> -->
                             <input type="text" placeholder="Search by book id,name or author..." value="{{out}}" name="senddata">
                             <button type="submit"><i class="fa fa-search"></i></button>
 
@@ -147,7 +147,7 @@
     {% with messages = get_flashed_messages() %}
 		{% if messages %}			
 		{% for message in messages %}
-	<h2>{{ message }} </h2>
+	<h2 style="text-align:center;">{{ message }} </h2>
 		{% endfor %}			
 		{% endif %}
 	{% endwith %}
