--- a/templates/bookentry.html
+++ b/templates/bookentry.html
@@ -45,7 +45,7 @@
                  <div class="container">
                      <form action="#" method="get" id="search-form" target="_blank">        
              <ul class="search-box">
-                  <button type="button"><i class="fa fa-microphone"></i></button>
+                <!--  <button type="button"><i class="fa fa-microphone"></i></button> -->
                   <input type="text" placeholder="Search...."/>
                   <button type="submit"><i class="fa fa-search"></i></button>
 
@@ -88,34 +88,34 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputBookID">Book ID</label>
-            <input type="text" class="form-control" id="inputBookID" name="inputBookID" placeholder="Book ID"  required>
+            <input type="number" class="form-control" id="inputBookID" name="inputBookID" placeholder="Book ID" min="1" max="999" required>
             <div class="valid-feedback">
                 valid
             </div>
           </div>
           <div class="form-group col-md-8">
             <label for="inputBookName">Book Name</label>
-            <input type="bookname" class="form-control" id="inputBookName" name="inputBookName" placeholder="Book Name" required>
+            <input type="bookname" class="form-control" id="inputBookName" name="inputBookName" placeholder="Book Name" minlength="3" required>
           </div>
         </div>
         <div class="form-group">
           <label for="inputAuthor">Author</label>
-          <input type="text" class="form-control" id="inputAuthor" name="inputAuthor" placeholder="Name of the Author" required>
+          <input type="text" class="form-control" id="inputAuthor" name="inputAuthor" placeholder="Name of the Author" pattern="(/^[A-Za-z].{3,}+$/)" minlength="3" required>
         </div>
         <div class="form-group">
           <label for="inputPublication">Publication</label>
-          <input type="text" class="form-control" id="inputPublication" name="inputPublication" placeholder="Name of the Publication" required>
+          <input type="text" class="form-control" id="inputPublication" name="inputPublication" placeholder="Name of the Publication" minlength="3" required>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="input">Edition</label>
-            <input type="text" class="form-control" id="inputEdition" name="inputEdition" required>
+            <input type="number" class="form-control" id="inputEdition" name="inputEdition" min="1" max="99" required>
           </div>
-          <div class="form-group col-md-4">
+          <div class="form-group col-md-3">
             <label for="inputGenre">Genre</label>
-            <select id="inputGenre" name="inputGenre" class="form-control">
-                <option selected>Choose...</option>
-                <option>Almanacs & Yearbooks</option>
+            <select id="inputGenre" name="inputGenre" class="form-control" placeholder="select" required>
+              <!--  <option disabled="disabled" selected="selected">Choose...</option> -->
+                <option selected>Almanacs & Yearbooks</option>
                 <option>Catalogs</option>
                 <option>Computers & Technology</option>
                 <option>Dictionaries</option>
@@ -130,11 +130,11 @@
                 <option>Others...</option>
             </select>
           </div>
-          <div class="form-group col-md-2">
+          <div class="form-group col-md-3">
             <label for="inputStatus">Book Status</label>
-            <select id="inputStatus" name="inputStatus" class="form-control">
-        <option selected>Select</option>
-        <option value="Available">Available</option>
+            <select id="inputStatus" name="inputStatus" class="form-control" placeholder="select" required>
+        <!-- <option disabled="disabled" selected="selected">Select</option> -->
+        <option selected value="Available">Available</option>
         <option value="Unavailable">Unavailable</option>
       </select>
           </div>
@@ -151,7 +151,13 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       </div>
-
-    
+      <p style="text-align: center;"><b> {% with messages = get_flashed_messages() %}
+        {% if messages %}			
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}			
+        {% endif %}
+        {% endwith %}</b>
+        </p>
 </body>
 </html>
