--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -21,27 +21,27 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name">
+                            <input type="text" name="name" class="form-control" placeholder="Your Name" minlength="3" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email"class="form-control" placeholder="Your E-mail">
+                            <input type="email" name="email"class="form-control" placeholder="Your E-mail" pattern="[a-z0-9]+[.]?[a-z0-9]+[@]matrusri.edu.in$" required>
                         </div>
                         
                         <div class="form-group">
                             <p>Are you satisfied by the Library Service</p>
-                            Yes <input type="radio" name="YorN" value="Yes">
+                            Yes <input checked type="radio" name="YorN" value="Yes">
                             No <input type="radio" name="YorN" value="No">
                         </div>
-                        <textarea name="textmsg" class="form-control" placeholder="Type your Message or Recommend your Suggestion" style="width: 650px;height: 200px;margin-bottom: 10px;"></textarea> 
+                        <textarea name="textmsg" class="form-control" placeholder="Type your Message or Recommend your Suggestion" style="width: 650px;height: 200px;margin-bottom: 10px;" required></textarea> 
                         <div class="form-group">
                             <input type="submit" name="btnsbmt" class="btnfeedback" value="Submit Feedback" style="outline:none;">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" name="number" class="form-control" placeholder="Your Mobile Number"><br/>
+                            <input type="tel" name="number" class="form-control" placeholder="Your Mobile Number" pattern="[6-9]{1}[0-9]{9}" required><br/>
                             <p>Rate our Library Services on 5 </p>
-                            <input type="radio" name="rate" value="1">
+                            <input checked type="radio" name="rate" value="1">
                             <input type="radio" name="rate" value="2">
                             <input type="radio" name="rate" value="3">
                             <input type="radio" name="rate" value="4">
