--- a/templates/fine_st_up.html
+++ b/templates/fine_st_up.html
@@ -14,7 +14,7 @@
                     <td>
                         <br />
                         
-                        <input type="text" name="id" placeholder="rollnumber" />
+                        <input type="text" name="id" placeholder="rollnumber" pattern="[0-9]{12}" minlength="12" maxlength="12" required/>
                         <br />
                         <br />
 
@@ -27,7 +27,11 @@
                     <td>
                         
                         <br />
-                        <input type="text" name="status" placeholder="update status" />
+                    <!--    <input type="text" name="status" placeholder="update status" /> -->
+                        <input checked type="radio" name="status" value="NOT PAID">
+				        Not paid
+                        <input type="radio" name="status" value="PAID">
+				        Paid
                         <br />
                         <br />
 
@@ -39,6 +43,6 @@
             <button type="submit" value="submit">SUBMIT</button>
         </center>
     </form>
-
+        
     {% endblock %}
 </body>
