--- a/templates/rolechange.html
+++ b/templates/rolechange.html
@@ -14,7 +14,7 @@
                     <td>
                         <br />
                         
-                        <input type="text" name="id" placeholder="rollnumber" />
+                        <input type="text" name="id" placeholder="rollnumber" pattern="[0-9]{12}" minlength="12" maxlength="12" required/>
                         <br />
                         <br />
 
@@ -27,7 +27,12 @@
                     <td>
                         
                         <br />
-                        <input type="text" name="role" placeholder="set role" />
+                    <!--    <input type="text" name="role" placeholder="set role" /> -->
+                        <input checked type="radio" name="role" value="student">
+                        student
+                        <input type="radio" name="role" value="admin">
+				        admin
+                        
                         <br />
                         <br />
 
@@ -39,6 +44,6 @@
             <button type="submit" value="submit">SUBMIT</button>
         </center>
     </form>
-
+        
     {% endblock %}
 </body>
